<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="song_name_null_hint">Song name cannot be empty</string>
	<string name="artist_name_null_hint">The singer name cannot be empty singer name cannot be empty</string>
	<string name="text_name_exist">the name has existed</string>
	<string name="limit_hint_text">The input limit has been reached</string>
	<string name="search_text_hint">Song、Artist、Album</string>
	<string name="favorite_remove_successfully_toast_text">Successfully removed from my favorite</string>
	<string name="song_add_to"><xliff:g id="name">%s</xliff:g> add to <xliff:g id="name">%s</xliff:g></string>
	<string name="setting_general">General setting</string>
	<string name="song_number_postfix">songs</string>
	<string name="share_title">Share To Friends</string>
	<string name="share_content">I found a very nice song in the lewa music player,  Let us listen song \n <xliff:g id="app_name">%1$s</xliff:g>  \n <xliff:g id="app_url">%2$s</xliff:g></string>
	<string name="text_all_album">all local album</string>
	<string name="nosdcard_title">SD card unmounted</string>
	<string name="nousb_title">USB storage unmounted</string>
	<string name="music_pro_def">0:00</string>
    <string name="track_name_def">没有歌曲在播放</string>
    <string name="artist_name_def">无</string>
    <string name="mine_my_favorite">My favorite</string>
    <string name="mine_recent_play">Recently play</string>
    <string name="mine_my_download">My download</string>
	<string name="artist_blank">&#160;&#160;&#160;</string>
	<string name="title_blank">&#160;&#160;&#160;</string>
    <string name="Hearing_loss">Avoid listening in large volume to protect your ears</string>
    <string name="app_name">Music</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="title_activity_song_hound">SongHoundActivity</string>
    <string name="title_activity_song_hound_history">HoundHistoryActivity</string>
    <string name="text_search_hint">search</string>
    <string name="text_all_songs">all music</string>
    <string name="create_playlist">create playlist</string>
    <string name="top_list">top list</string>
    <string name="text_song_num">%1$d songs</string>
	<string name="text_album_num">%1$d albums</string>
    <string name="edit_playlist_success_toast_text">%1$d songs added to %2$s</string>
    <string name="remove_playlistsong_success_toast_text">%1$d songs removed from %2$s</string>
    <string name="check_song_number">%1$d chosen</string>
    <string name="btn_show_all_albums_text">Display full album</string>
    <string name="title_cover_dialog">playlist cover</string>
    <string name="common_msg_nosdcard">SD card not found</string>
    <string name="common_msg_get_photo_failure">Failed to get picture</string>
    <string name="common_msg_get_not_image_file">You can only choose image file as cover</string>
    <string name="photoPickerNotFoundText">No picture in your phone</string>
    <string name="remove_song_text">remove song from playlist</string>
    <string name="remove_song_file_text">delete music file</string>
    <string name="remove_song_prompt_text">Are you sure to remove selected songs？</string>
    <string name="item_modify_text">Edit</string>
    <string name="item_remove_text">Delete</string>
    <string name="remove_dialog_message_text">Are you sure to delete the playlist?</string>
    <string name="favorite_successfully_toast_text">Successfully added to my favorite</string>
    <string name="rename_playlist_same_prompt">Successfully added to my favorite</string>
    <string name="traffic_tip_text">Data flow notice</string>
    <string name="traffic_tip_message_text">Not in wifi environment, continuing playing will cause data expense</string>
    <string name="continue_play_text">Continue</string>
    <string name="cancel_cn_text">Cancel</string>
    <string name="ok_cn_text">OK</string>
    <string name="no_artist_album_text">No song of the singer found in local library该歌手本地没有对应的专辑</string>
    <string name="no_sdcard_title_text">SD card not available</string>
    <string name="no_sdcard_message_text">Please plug in SD card and try again</string>
    <string name="text_all_local_songs">all local music</string>
    <string name="playlist_dialog_title">edit playlist</string>
    <string name="remove_playlist_title">delete playlist</string>
    <string name="cancel_text">cancel</string>
    <string name="ok_text">ok</string>
    <string name="edit_song_text">edit music information</string>
    <string name="new_songs_list">new music list</string>
    <string name="hot_songs_list">hot music list</string>
    <string name="edit_playlist">edit playlist</string>
    <string name="text_song_hound_title">recognize music</string>
    <string name="btn_create_track_text">create playlist</string>
    <string name="text_playlist_cover">playlist cover</string>
    <string name="hint_playlist_name">playlist name</string>
    <string name="default_playlist_name_text">my playlist</string>
    <string name="btn_add_to_text">add to</string>
    <string name="btn_download_text">download</string>
    <string name="btn_share_text">share</string>
    <string name="btn_favorite_text">like</string>
    <string name="btn_remove_text">delete</string>
    <string name="EQ_title_text">EQ</string>
    <string name="text_hound_prompt">click to start recognizing</string>
    <string name="text_bt_begin_hound">start recognizing</string>
    <string name="text_hound_failed_prompt">no matching</string>
    <string name="text_bt_re_hound">restart recognizing</string>
    <string name="text_bt_continue_hound">continue recognizing</string>
    <string name="all_star">all star</string>
    <string name="no_music_text">no music yet</string>
    <string name="scan_prompt_message_text">you can browse music, or scan your local music files here.</string>
    <string name="btn_scan_song_text">scan music files</string>
    <string name="text_playlist">playlist</string>
    <string name="add_song">add music</string>
    <string name="btn_add_text">add</string>
    <string name="hint_song_name">music</string>
    <string name="hint_artist_name">artist</string>
    <string name="hint_album_name">album</string>
    <string name="remove_local_song_text">remove local music file meanwhile</string>
    <string name="text_create_new_play_list">create playlist</string>
    <string name="text_my_favorites">my favorite</string>
    <string name="text_title_add_to">add to</string>
    <string name="song_synchronize">Scan music files</string>
    <string name="song_hound">recognize song</string>
    <string name="sleep_mode">Sleep mode</string>
    <string name="close_sleep_mode">switch off sleep mode</string>
    <string name="music_settings">music settings</string>
    <string name="exit">Exit</string>
    <string name="svg_200">M101.09,22.816c40.253,0.01,56.453,0.014,67.326,10.891c10.87,10.877,10.866,26.648,10.856,67.332
	c-0.01,41.088-0.014,56.455-10.928,67.365c-10.838,10.832-27.432,10.828-67.293,10.818c-39.748-0.01-56.453-0.014-67.457-11.023
	c-11.245-11.251-10.734-27.347-10.724-67.199c0.01-40.937,0.014-56.455,10.803-67.238C44.636,22.802,60.256,22.806,101.09,22.816z</string>
    <string name="svg_180">M90.025,0.001c46.324,0.012,64.968,0.016,77.481,12.534c12.51,12.518,12.505,30.667,12.493,77.488
	c-0.012,47.285-0.016,64.97-12.576,77.526c-12.473,12.466-31.57,12.461-77.443,12.45c-45.743-0.012-64.968-0.016-77.632-12.686
	C-0.593,154.365-0.005,135.841,0.007,89.978c0.012-47.112,0.016-64.97,12.432-77.38C25.056-0.015,43.032-0.01,90.025,0.001z</string>
    <string name="albumsongseparator">\n</string>
    <string name="notification_artist_album"><xliff:g id="album">%2$s</xliff:g>\n<xliff:g id="artist">%1$s</xliff:g></string>
    <string name="unknownwidget">Unknown</string>
    <string name="online_downloading">progress</string>
    <string name="download_queued">already in downloading queue</string>
    <string name="online_pause">pause</string>
    <string name="sleep_start">Sleep Timer</string>
    <string name="sleep_close">close sleep timer</string>
    <string name="sleep_tip">Please set the timer for stopping the player(in mins)</string>
    <string name="sleep_set_ok">player will stop playing after %1$d minute(s)</string>
    <string name="sleep_close_ok">Sleep timer stopped</string>
	<string name="sleep_start_ok">Sleep timer started</string>
    <string name="sleep_time_min">1</string>
    <string name="sleep_time_max">90</string>
    <string name="ok">OK</string>
    <string name="sleep_set">%1$dmin(s)</string>
    <string name="record">my record</string>
    <string name="setting_auto_play">Auto play</string>
    <string name="setting_auto_play_summary">Auto play music on back.</string>
    <string name="setting_auto_play_key">autoPlay</string>
    <string name="setting_backlight_title">Always on</string>
    <string name="setting_backlight_key">isbacklight</string>
    <string name="setting_backlight_summary">Screen remains on while the song is playing</string>
    <string name="setting_lewaid_title">LeWa ID</string>
    <string name="setting_lewaid_key">lewaidkey</string>
    <string name="setting_downimg_summary">Artist picture and album art</string>
    <string name="setting_downlrc_title">Get lyrics</string>
    <string name="setting_downInfo_title">Download songs information</string>
    <string name="setting_downlrc_summary">Get lyrics</string>
    <string name="setting_downlrc_key">isdownlrc</string>
    <string name="setting_downimg_title">Get artwork</string>
    <string name="setting_downimg_key">isdownimg</string>
    <string name="setting_downInfo_key">isdownInfo</string>
    <string name="setting_flowhint_key">isflowhint</string>
    <string name="setting_filtersongs_key">isfiltersongs</string>
    <string name="setting_download_title">Download and Streaming</string>
    <string name="setting_download_summary">WiFi Only</string>
    <string name="setting_download_key">downloadmethod</string>
    <string name="musicsettings">LeWa Player Settings</string>
    <string name="setting_download">Download Setting</string>
    <string name="setting_basic">Basic Setting</string>
    <string name="setting_bg_title">Change background</string>
    <string name="setting_bg_key">bgchanging</string>
    <string name="setting_shake_title">Shake to skip</string>
    <string name="setting_shake_summary">Shake phone to skip to the next track</string>
    <string name="setting_shake_key">isshake</string>
    <string name="shake_degree_title">Shake sensitivity</string>
    <string name="shake_degree_summary">Adjust how much force is needed to skip songs</string>
    <string name="shake_degree_key">shakedegree</string>
    <string name="setting_fade_key">isfade</string>
    <string name="shake_degree_gentle">Gentle</string>
    <string name="shake_degree_easy"></string>
    <string name="shake_degree_common"></string>
    <string name="shake_degree_excited"></string>
    <string name="shake_degree_force">Violent</string>
    <string name="setting_show_spectrum">Show spectral View</string>
	<string name="music_setting">Music setting</string>
	<string name="file_filter">Choose your own music files</string>
	<string name="filter_songs">Block songs within 60 seconds</string>
	<string name="filter_songs_hint">Block small audio files</string>
	<string name="EQ">Equalizer settings</string>
	<string name="adjust_EQ">Set the melody</string>
	<string name="folder">Choose your own folder</string>
	<string name="choose_folder">Block the folders you do not need</string>
	<string name="setting_fade_title">Volume fade</string>
	<string name="setting_fade_summary">Smoothly switch when songs change</string>
    <string name="clear_histroy">Clear history</string>
</resources>