<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@id/tv_song_name_label"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="20dp"
            style="@style/TextView.Large.DarkGray"
            android:text="@string/hint_song_name"/>

        <EditText
            android:id="@id/et_song_name"
            android:layout_width="fill_parent"
            android:layout_height="51dp"
            android:layout_toRightOf="@id/tv_song_name_label"
            android:background="@drawable/se_text_field"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/black_hint"
            android:hint="@string/hint_song_name"
            style="@style/TextView.Large.DarkGray"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@id/tv_artist_name_label"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="20dp"
            android:text="@string/hint_artist_name"
            style="@style/TextView.Large.DarkGray"/>

        <EditText
            android:id="@id/et_artist_name"
            android:layout_width="fill_parent"
            android:layout_height="51dp"
            android:layout_toRightOf="@id/tv_artist_name_label"
            android:background="@drawable/se_text_field"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/black_hint"
            android:hint="@string/hint_artist_name"
            style="@style/TextView.Large.DarkGray"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@id/tv_album_name_label"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="20dp"
            android:text="@string/hint_album_name"
            style="@style/TextView.Large.DarkGray"/>

        <EditText
            android:id="@id/et_album_name"
            android:layout_width="fill_parent"
            android:layout_height="51dp"
            android:layout_toRightOf="@id/tv_album_name_label"
            android:background="@drawable/se_text_field"
            android:textCursorDrawable="@null"
            android:hint="@string/hint_album_name"
            android:textColorHint="@color/black_hint"
            style="@style/TextView.Large.DarkGray"/>

    </RelativeLayout>

</LinearLayout>