<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".AlbumListActivity$PlaceholderFragment">

    <ImageView
        android:id="@id/iv_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/cover_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/d_bg_gradient_white_60_100"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/status_bar_height">

        <RelativeLayout
            android:id="@id/llo1"
            style="@style/ActionBar"
            android:layout_alignParentTop="true">

            <ImageButton
                android:id="@id/bt_back"
                android:layout_width="@dimen/actionbar_height"
                android:layout_height="@dimen/actionbar_height"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                
                android:background="@drawable/se_action_back" />

            <TextView
                android:id="@id/tv_title"
                style="@style/TextView.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/edit_playlist" />

            <ImageButton
                android:id="@id/bt_done"
                android:layout_width="@dimen/actionbar_height"
                android:layout_height="@dimen/actionbar_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/actionbar_confirm" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/ab_solid_shadow_holo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:padding="15dp">

            <LinearLayout
                android:id="@id/llo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerVertical="true"
                android:orientation="vertical">
                    
            <ImageView
                android:id="@id/bt_add_cover"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="fitCenter"
                android:background="@drawable/add_cover"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:focusable="false"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    style="@style/TextView.Small.TransWhite"
                    android:text="@string/text_playlist_cover" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/llo2"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <com.lewa.view.ClearEditText
                    android:id="@id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:background="@drawable/se_et_bg"
                    android:hint="@string/hint_playlist_name"
                    android:singleLine="true"
                    android:textSize="15.0dp"
                    android:textCursorDrawable="@drawable/sv_cursor"
                    style="@style/TextView.Middle.White" 
                    android:maxLength="21"
                    android:text="@string/default_playlist_name_text" />


                <LinearLayout
                    android:id="@id/bt_add_song"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:descendantFocusability="blocksDescendants"
                    android:background="@drawable/se_btn_buttom">

                    <ImageView
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_height="wrap_content"
                        android:layout_width="22dp"
                        android:src="@drawable/add_song_plus"
                        android:clickable="false"
                        android:background="@android:color/transparent"
                        android:duplicateParentState="true" />

                    <TextView
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/black_a_80"
                        android:textSize="@dimen/item_title_text_size"
                        android:clickable="false"
                        android:background="@android:color/transparent"
                        android:text="@string/add_song" />

                        
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <ListView
            android:id="@id/lv_song"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none"
            android:fadingEdge="none"
            android:divider="@color/lv_divider"
            android:dividerHeight="1dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/actionbar_bottom_height"
            />
            <!-- android:layout_marginBottom="@dimen/actionbar_bottom_height"-->

    </LinearLayout>

    <LinearLayout
        android:id="@id/bt_remove_song"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_bottom_height"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/bottom_panel_bg"
        android:gravity="center">

        <ImageButton
            android:id="@id/bt_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/se_ab_delete"
            android:background="@android:color/transparent"
            android:duplicateParentState="true"
            android:clickable="false"
            android:layout_weight="1.0" />

    </LinearLayout>

</FrameLayout>
